--- a/jagha.html
+++ b/jagha.html
@@ -1,17 +1,206 @@
-今天是星期五
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <style type="text/css">
-        h1{
-            text-align: center;
-            font-size: 50px;
-        }
-    </style>
+    <title>Awesome-pyecharts</title>
+            <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
+
 </head>
 <body>
-    <h1>Hello Github</h1>   
+    <div id="4630c73da92e47ad9843143b0a048ea5" class="chart-container" style="width:900px; height:500px;"></div>
+    <script>
+        var chart_4630c73da92e47ad9843143b0a048ea5 = echarts.init(
+            document.getElementById('4630c73da92e47ad9843143b0a048ea5'), 'white', {renderer: 'canvas'});
+        var option_4630c73da92e47ad9843143b0a048ea5 = {
+    "animation": true,
+    "animationThreshold": 2000,
+    "animationDuration": 1000,
+    "animationEasing": "cubicOut",
+    "animationDelay": 0,
+    "animationDurationUpdate": 300,
+    "animationEasingUpdate": "cubicOut",
+    "animationDelayUpdate": 0,
+    "color": [
+        "#c23531",
+        "#2f4554",
+        "#61a0a8",
+        "#d48265",
+        "#749f83",
+        "#ca8622",
+        "#bda29a",
+        "#6e7074",
+        "#546570",
+        "#c4ccd3",
+        "#f05b72",
+        "#ef5b9c",
+        "#f47920",
+        "#905a3d",
+        "#fab27b",
+        "#2a5caa",
+        "#444693",
+        "#726930",
+        "#b2d235",
+        "#6d8346",
+        "#ac6767",
+        "#1d953f",
+        "#6950a1",
+        "#918597"
+    ],
+    "series": [
+        {
+            "type": "sankey",
+            "data": [
+                {
+                    "name": "Italy"
+                },
+                {
+                    "name": "18\u5c81\u4ee5\u4e0b"
+                },
+                {
+                    "name": "19-50\u5c81"
+                },
+                {
+                    "name": "50-70\u5c81"
+                },
+                {
+                    "name": "70\u5c81\u4ee5\u4e0a"
+                },
+                {
+                    "name": "Deceased"
+                },
+                {
+                    "name": "Active/Recovered"
+                }
+            ],
+            "links": [
+                {
+                    "source": "Italy",
+                    "target": "18\u5c81\u4ee5\u4e0b",
+                    "value": "1677"
+                },
+                {
+                    "source": "18\u5c81\u4ee5\u4e0b",
+                    "target": "Deceased",
+                    "value": "167"
+                },
+                {
+                    "source": "18\u5c81\u4ee5\u4e0b",
+                    "target": "Active/Recovered",
+                    "value": "1510"
+                },
+                {
+                    "source": "Italy",
+                    "target": "19-50\u5c81",
+                    "value": "31394"
+                },
+                {
+                    "source": "19-50\u5c81",
+                    "target": "Deceased",
+                    "value": "408"
+                },
+                {
+                    "source": "19-50\u5c81",
+                    "target": "Active/Recovered",
+                    "value": "30986"
+                },
+                {
+                    "source": "Italy",
+                    "target": "50-70\u5c81",
+                    "value": "43617"
+                },
+                {
+                    "source": "50-70\u5c81",
+                    "target": "Deceased",
+                    "value": "4492"
+                },
+                {
+                    "source": "50-70\u5c81",
+                    "target": "Active/Recovered",
+                    "value": "39125"
+                },
+                {
+                    "source": "Italy",
+                    "target": "70\u5c81\u4ee5\u4e0a",
+                    "value": "43139"
+                },
+                {
+                    "source": "70\u5c81\u4ee5\u4e0a",
+                    "target": "Deceased",
+                    "value": "34813"
+                },
+                {
+                    "source": "70\u5c81\u4ee5\u4e0a",
+                    "target": "Active/Recovered",
+                    "value": "8326"
+                }
+            ],
+            "left": "5%",
+            "top": "5%",
+            "right": "20%",
+            "bottom": "5%",
+            "nodeWidth": 20,
+            "nodeGap": 30,
+            "nodeAlign": "justify",
+            "layoutIteration": 32,
+            "orient": "horizontal",
+            "draggable": true,
+            "focusNodeAdjacency": false,
+            "label": {
+                "show": true,
+                "position": "top",
+                "margin": 8
+            },
+            "lineStyle": {
+                "show": true,
+                "width": 1,
+                "opacity": 0.3,
+                "curveness": 0.5,
+                "type": "solid",
+                "color": "source"
+            }
+        }
+    ],
+    "legend": [
+        {
+            "data": [
+                ""
+            ],
+            "selected": {
+                "": true
+            },
+            "show": true,
+            "padding": 5,
+            "itemGap": 10,
+            "itemWidth": 25,
+            "itemHeight": 14
+        }
+    ],
+    "tooltip": {
+        "show": true,
+        "trigger": "item",
+        "triggerOn": "mousemove|click",
+        "axisPointer": {
+            "type": "line"
+        },
+        "showContent": true,
+        "alwaysShowContent": false,
+        "showDelay": 0,
+        "hideDelay": 100,
+        "textStyle": {
+            "fontSize": 14
+        },
+        "borderWidth": 0,
+        "padding": 5
+    },
+    "title": [
+        {
+            "text": "\u610f\u5927\u5229\u65b0\u51a0\u80ba\u708e\u75c5\u60a3\u5e74\u9f84\u5206\u5e03",
+            "padding": 5,
+            "itemGap": 10
+        }
+    ]
+};
+        chart_4630c73da92e47ad9843143b0a048ea5.setOption(option_4630c73da92e47ad9843143b0a048ea5);
+    </script>
 </body>
 </html>
